--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+/* :root {
+   --text-black-gray:#65676B;
+   --primary-color:text-red-500;
+   -- background-gray:#ebedf0;
+   -- background-hover-red:text-red-600;
+} */
+
 /* CUSTOM CSS */
 
 .flex-center {
@@ -45,4 +52,13 @@ html *::-webkit-scrollbar-thumb {
 html *::-webkit-scrollbar-track {
     border-radius: 0;
     background-color: rgba(0, 0, 0, 0.01);
+}
+
+/*  */
+.tyn-media-multiple > *:not(:first-child) {
+    margin-left: -12px;
+}
+
+.word-wrap {
+    word-wrap: break-word;
 }
